==> joernalraun/MIND-/USB CDC/Core/Src/BMI160.c <==
#include "BMI160.h"

int8_t I2cGetRegs(struct bmi160Dev *dev, uint8_t reg_addr, uint8_t *data, uint16_t len){
  HAL_I2C_Master_Transmit(&hi2c2,dev->id<<1,&reg_addr,1,1000);
  HAL_Delay(10);
  HAL_I2C_Master_Receive(&hi2c2,dev->id<<1,data,len,1000);
  return BMI160_OK;
}

int8_t I2cSetRegs(struct bmi160Dev *dev, uint8_t reg_addr, uint8_t *data, uint16_t len){
  uint8_t buf[255]={0};
  buf[0]=reg_addr;
  for(int i=1;i<len+1;i++)
	  buf[i]=data[i-1];
  HAL_I2C_Master_Transmit(&hi2c2,dev->id<<1,buf,len+1,1000);
  return BMI160_OK;
}
